--- a/1-flex-direction.html
+++ b/1-flex-direction.html
@@ -21,10 +21,27 @@
             text-align: center;
             margin: 5px;
         }
+
+        .row{
+            flex-direction: row;
+        }
+
+        .row-reverse li{
+            background-color: green;
+        }
+
     </style>
 </head>
 <body>
     <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+
+    <ul class="flex-container row-reverse">
         <li class="flex-item">1</li>
         <li class="flex-item">2</li>
         <li class="flex-item">3</li>
