--- a/1-flex-direction.html
+++ b/1-flex-direction.html
@@ -30,6 +30,10 @@
             background-color: green;
         }
 
+        .row-reverse {
+            flex-direction: row-reverse;
+        }
+
     </style>
 </head>
 <body>
