--- a/1-flex-direction.html
+++ b/1-flex-direction.html
@@ -34,6 +34,11 @@
             flex-direction: row-reverse;
         }
 
+        .column{
+            float: left;
+            flex-direction: column;
+        }
+
     </style>
 </head>
 <body>
@@ -46,6 +51,14 @@
     </ul>
 
     <ul class="flex-container row-reverse">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+
+    <ul class="flex-container column">
         <li class="flex-item">1</li>
         <li class="flex-item">2</li>
         <li class="flex-item">3</li>
