--- a/1-flex-direction.html
+++ b/1-flex-direction.html
@@ -39,6 +39,14 @@
             flex-direction: column;
         }
 
+        .column-reverse li{
+            background-color: green;
+        }
+
+        .column-reverse{
+            flex-direction: column-reverse;
+        }
+
     </style>
 </head>
 <body>
@@ -59,6 +67,14 @@
     </ul>
 
     <ul class="flex-container column">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+    </ul>
+
+    <ul class="flex-container column-reverse">
         <li class="flex-item">1</li>
         <li class="flex-item">2</li>
         <li class="flex-item">3</li>
